--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,22 @@
   "description": "Projeto da disciplina de ESS",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "NODE_ENV=dev node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Franclin Cabral",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^10.3.2"
+    "@types/node": "^10.3.2",
+    "ts-node": "^6.1.1",
+    "typescript": "^2.9.2"
   },
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "http-status-codes": "^1.3.0",
+    "mongoose": "^5.1.5",
+    "mongoose-bcrypt": "^1.5.1"
   }
 }
