[#57] implementação da funcionalidade agenda

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,5 +6,6 @@
         "noImplicitAny": false,
         "sourceMap": true,
         "strict": true,
+        "strictPropertyInitialization": false
     }
 }
