--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "express": "^4.16.3",
     "http-status-codes": "^1.3.0",
     "mongoose": "^5.1.5",
-    "mongoose-bcrypt": "^1.5.1"
+    "mongoose-bcrypt": "^1.5.1",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   }
 }
